# wallpaper

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
.github/workflows/: check.yml  check2.yml  test.yml  wallpaper.yml
check/: check.sln
check/check/: check.c  check.vcxproj
executables/: test.xtx
src/: check.c
wallpaper/: Cargo.toml
wallpaper/src/: main.rs
