[package]
name = "wallpaper"
version = "1.0.0"
edition = "2021"
authors = ["Skye <https://github.com/9128hotel>"]
description = "A Rust program to set the desktop background on Windows 10"
repository = "https://github.com/9128hotel/wallpaper"

[dependencies]
image = "0.24.0"
winapi = { version = "0.3.9", features = ["winuser"] }
winapi-util = "0.1.5"